@@ -15,6 +15,7 @@
    (CASSANDRA-3295)
  * Fix missing fields in CLI `show schema` output (CASSANDRA-3304)
  * Fix broken CompressedRandomAccessReaderTest (CASSANDRA-3298)
+ * Nodetool no longer leaks threads and closes JMX connections (CASSANDRA-3309)
 
 1.0.0-rc2
  * Log a meaningful warning when a node receives a message for a repair session
